fix incorrect link on share page and spacing on share buttons

--- a/stylesheets/_style.scss
+++ b/stylesheets/_style.scss
@@ -79,7 +79,7 @@ h2 {
 }
 
 .button-small {
-	height: 32px;
+	height: 30px;
 	line-height: 32px;
 	border-radius: 17px;
 	padding: 0 20px;
